Made a random number generator 1 to 6

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <body>
     <h1>JavaScript and jQuery Tasks Part 2</h1>
 
-    <div class="row">
+    <div class="row dieContainer">
         <h2>A six-sided die</h2>
         <br>
-        <div class="col col12 colM6 colL4 align-items-center">
+        <div class="col col12 colM6 colL4 align-items-center d-block">
             <div id="dieBox">
-                <p id="dieNumber"></p>
+                <h2 id="dieNumber">0</h2>
             </div>
             <button id="dieButton" name="button">ROLL THE DIE!</button>
 
