--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <body>
     <h1>JavaScript and jQuery Tasks Part 2</h1>
 
-    <div class="row dieContainer">
+<!-- PART 1: RANDOMLY GENERATING NUMBERS FROM 1 - 6 -->
+
+    <!-- <div class="row dieContainer">
         <h2>A six-sided die</h2>
         <br>
         <div class="col col12 colM6 colL4 align-items-center d-block">
@@ -24,7 +26,26 @@
 
         </div>
 
+    </div> -->
+
+
+
+<!-- PART 2: NUMBER GUESSING GAME -->
+    <div class="row">
+        <h2>Number Guessing Game</h2>
+        <br>
+        <div class="col col12 colM6 colL4 align-items-center d-block">
+            <div id="">
+                <h2 id="">My guess was </h2>
+            </div>
+            <button id="" name="button">GUESS NUMBER</button>
+
+        </div>
+
     </div>
+
+
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
